# congenial-octo-spork

./: .ocamlformat  README.md  blog.opam  dune-project
_www/: cache  feed.atom  index.html
_www/articles/: foo.html  hello.html
_www/css/: style.css
assets/templates/: article.html  index.html  layout.html
content/: index.md
content/articles/: foo.md  hello.md
lib/: action.ml  action.mli  dune  target.ml
